--- a/MoversEditor/FileNotFoundForm.fr.resx
+++ b/MoversEditor/FileNotFoundForm.fr.resx
@@ -117,126 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="&gt;&gt;bt_settings.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;bt_cancel.Name" xml:space="preserve">
-    <value>bt_cancel</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>442, 99</value>
-  </data>
-  <data name="bt_settings.Location" type="System.Drawing.Point, System.Drawing">
-    <value>185, 64</value>
-  </data>
   <data name="bt_retry.Text" xml:space="preserve">
-    <value>Retry</value>
-  </data>
-  <data name="&gt;&gt;lb_error.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;bt_cancel.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="lb_error.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 9</value>
-  </data>
-  <data name="lb_error.Size" type="System.Drawing.Size, System.Drawing">
-    <value>418, 52</value>
-  </data>
-  <data name="&gt;&gt;bt_retry.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>Réessayer</value>
   </data>
   <data name="bt_cancel.Text" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Annuler</value>
   </data>
-  <data name="bt_cancel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>File not found</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="bt_cancel.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;bt_settings.Name" xml:space="preserve">
-    <value>bt_settings</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>FileNotFoundForm</value>
-  </data>
-  <data name="&gt;&gt;lb_error.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;lb_error.Name" xml:space="preserve">
-    <value>lb_error</value>
-  </data>
-  <data name="lb_error.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;lb_error.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="lb_error.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleCenter</value>
-  </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
-  <data name="bt_settings.Text" xml:space="preserve">
-    <value>Parameters</value>
-  </data>
-  <data name="&gt;&gt;bt_settings.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;bt_retry.Name" xml:space="preserve">
-    <value>bt_retry</value>
-  </data>
-  <data name="&gt;&gt;bt_cancel.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="bt_retry.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 64</value>
-  </data>
-  <data name="bt_settings.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bt_settings.Location" type="System.Drawing.Point, System.Drawing">
+    <value>158, 64</value>
   </data>
   <data name="bt_settings.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
+    <value>119, 23</value>
   </data>
-  <data name="&gt;&gt;bt_retry.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="bt_settings.Text" xml:space="preserve">
+    <value>Ouvrir les paramètres</value>
   </data>
-  <data name="lb_error.Text" xml:space="preserve">
-    <value>label1</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Fichier introuvable</value>
   </data>
-  <data name="bt_retry.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="bt_cancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>355, 64</value>
-  </data>
-  <data name="&gt;&gt;bt_settings.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;bt_retry.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="bt_retry.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 23</value>
-  </data>
-  <data name="&gt;&gt;bt_cancel.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>fr</value>
-  </metadata>
 </root>
